<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="427dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/userlogin" />

    <EditText
        android:id="@+id/studentID"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:paddingLeft="5dp"
        android:background="@drawable/edit_round"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/pin"
        android:layout_width="275dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:paddingLeft="5dp"
        android:background="@drawable/edit_round"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginid"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_round1"
        android:text="@string/login"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="New User?"
            android:layout_gravity="center"
            android:textColor="#000" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="#00A6F6"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>